# mlx-forge

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  index.html  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
core/: cli.py  config.py  datakit.py  download.py  export_gguf.py  fuse.py  loop.py  push_hf.py  train.py  transfer.py  tui.py
docs/: architecture.md  cli-reference.md  data-guide.md  troubleshooting.md
recipes/data_flywheel/: flywheel.py  program.md  recipe.yaml  seeds.jsonl
recipes/edge_android/: eval.py  program.md  recipe.yaml  scorer.py
recipes/edge_android/data/: train.jsonl  valid.jsonl
recipes/healthcare_coding/: eval.py  program.md  recipe.yaml  scorer.py
recipes/healthcare_coding/data/: train.jsonl  valid.jsonl
recipes/toolcalling/: eval.py  program.md  recipe.yaml
recipes/toolcalling/data/: train.jsonl  valid.jsonl
shared/formats/: tool_schema.py
tests/: test_config.py  test_datakit.py  test_edge_eval.py  test_eval.py  test_export_gguf.py  test_flywheel.py  test_fuse.py  test_healthcare_eval.py  test_loop.py  test_loop_ratchet.py  test_push_hf.py  test_tool_schema.py  test_train.py  test_transfer.py
